syntax = "proto3";
import "revision.proto";

message DocumentClientWSData {
    string doc_id = 1;
    DocumentClientWSDataType ty = 2;
    RepeatedRevision revisions = 3;
    string id = 4;
}
message DocumentServerWSData {
    string doc_id = 1;
    DocumentServerWSDataType ty = 2;
    bytes data = 3;
}
message NewDocumentUser {
    string user_id = 1;
    string doc_id = 2;
    bytes revision_data = 3;
}
enum DocumentClientWSDataType {
    ClientPushRev = 0;
}
enum DocumentServerWSDataType {
    ServerAck = 0;
    ServerPushRev = 1;
    ServerPullRev = 2;
    UserConnect = 3;
}
